SL: sincronizacion de Accesos, Transportes

--- a/src/com.cpp.calypso.proyecto.aplicacion/com.cpp.calypso.proyecto.aplicacion.csproj
+++ b/src/com.cpp.calypso.proyecto.aplicacion/com.cpp.calypso.proyecto.aplicacion.csproj
@@ -161,9 +161,11 @@
     <Compile Include="Dto\AccesoTemporalDto.cs" />
     <Compile Include="Dto\ArchivoDto.cs" />
     <Compile Include="Dto\CatalogoDto.cs" />
+    <Compile Include="Dto\ChoferDto.cs" />
     <Compile Include="Dto\ColaboradorDto.cs" />
     <Compile Include="Dto\ConsumoDto.cs" />
     <Compile Include="Dto\ConsumoQrDto.cs" />
+    <Compile Include="Dto\ConsumoTransporteDto.cs" />
     <Compile Include="Dto\ConsumoViandaDto.cs" />
     <Compile Include="Dto\ConsumoViandaQrDto.cs" />
     <Compile Include="Dto\ContratoProveedorDto.cs" />
@@ -171,11 +173,17 @@
     <Compile Include="Dto\DistribucionViandaDto.cs" />
     <Compile Include="Dto\EmpresaDto.cs" />
     <Compile Include="Dto\LocacionDto.cs" />
+    <Compile Include="Dto\LugarDto.cs" />
     <Compile Include="Dto\MenuProveedorDto.cs" />
     <Compile Include="Dto\OpcionComidaDto.cs" />
+    <Compile Include="Dto\OperacionDiariaDto.cs" />
+    <Compile Include="Dto\OperacionDiariaRutaDto.cs" />
     <Compile Include="Dto\ProveedorDto.cs" />
     <Compile Include="Dto\RegistroAccesoDto.cs" />
     <Compile Include="Dto\RequisitoColaboradorDto.cs" />
+    <Compile Include="Dto\RutaDto.cs" />
+    <Compile Include="Dto\RutaHorarioDto.cs" />
+    <Compile Include="Dto\RutaHorarioVehiculoDto.cs" />
     <Compile Include="Dto\ServicioProveedorDto.cs" />
     <Compile Include="Dto\ServicioRolDto.cs" />
     <Compile Include="Dto\SolicitudViandaDto.cs" />
@@ -184,14 +192,17 @@
     <Compile Include="Dto\TipoOpcionComidaDto.cs" />
     <Compile Include="Dto\UsuarioDto.cs" />
     <Compile Include="Dto\UsuarioMovilDto.cs" />
+    <Compile Include="Dto\VehiculoDto.cs" />
     <Compile Include="Dto\ZonaDto.cs" />
     <Compile Include="FooAsyncBaseCrudAppService.cs" />
     <Compile Include="Interfaces\IAccesoTemporal.cs" />
     <Compile Include="Interfaces\IArchivo.cs" />
     <Compile Include="Interfaces\ICatalogo.cs" />
+    <Compile Include="Interfaces\IChofer.cs" />
     <Compile Include="Interfaces\IColaborador.cs" />
     <Compile Include="Interfaces\IConsumo.cs" />
     <Compile Include="Interfaces\IConsumoQr.cs" />
+    <Compile Include="Interfaces\IConsumoTransporte.cs" />
     <Compile Include="Interfaces\IConsumoVianda.cs" />
     <Compile Include="Interfaces\IConsumoViandaQr.cs" />
     <Compile Include="Interfaces\IContratoProveedor.cs" />
@@ -199,11 +210,17 @@
     <Compile Include="Interfaces\IDistribucionVianda.cs" />
     <Compile Include="Interfaces\IEmpresa.cs" />
     <Compile Include="Interfaces\ILocacion.cs" />
+    <Compile Include="Interfaces\ILugar.cs" />
     <Compile Include="Interfaces\IMenuProveedor.cs" />
     <Compile Include="Interfaces\IOpcionComida.cs" />
+    <Compile Include="Interfaces\IOperacionDiaria.cs" />
+    <Compile Include="Interfaces\IOperacionDiariaRuta.cs" />
     <Compile Include="Interfaces\IProveedor.cs" />
     <Compile Include="Interfaces\IRegistroAcceso.cs" />
     <Compile Include="Interfaces\IRequisitoColaborador.cs" />
+    <Compile Include="Interfaces\IRuta.cs" />
+    <Compile Include="Interfaces\IRutaHorario.cs" />
+    <Compile Include="Interfaces\IRutaHorarioVehiculo.cs" />
     <Compile Include="Interfaces\IServicioProveedor.cs" />
     <Compile Include="Interfaces\IServicioRol.cs" />
     <Compile Include="Interfaces\ISolicitudVianda.cs" />
@@ -212,15 +229,18 @@
     <Compile Include="Interfaces\ITipoOpcionComida.cs" />
     <Compile Include="Interfaces\IUsuario.cs" />
     <Compile Include="Interfaces\IUsuarioMovil.cs" />
+    <Compile Include="Interfaces\IVehiculo.cs" />
     <Compile Include="Interfaces\IZona.cs" />
     <Compile Include="ProyectoAplicacionModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\AccesoTemporalService.cs" />
     <Compile Include="Service\ArchivoService.cs" />
     <Compile Include="Service\CatalogoService.cs" />
+    <Compile Include="Service\ChoferService.cs" />
     <Compile Include="Service\ColaboradorService.cs" />
     <Compile Include="Service\ConsumoQrService.cs" />
     <Compile Include="Service\ConsumoService.cs" />
+    <Compile Include="Service\ConsumoTransporteService.cs" />
     <Compile Include="Service\ConsumoViandaService.cs" />
     <Compile Include="Service\ConsumoViandaQrService.cs" />
     <Compile Include="Service\ContratoProveedorService.cs" />
@@ -228,11 +248,17 @@
     <Compile Include="Service\DistribucionViandaService.cs" />
     <Compile Include="Service\EmpresaService.cs" />
     <Compile Include="Service\LocacionService.cs" />
+    <Compile Include="Service\LugarService.cs" />
     <Compile Include="Service\MenuProveedorService.cs" />
     <Compile Include="Service\OpcionComidaService.cs" />
+    <Compile Include="Service\OperacionDiariaRutaService.cs" />
+    <Compile Include="Service\OperacionDiariaService.cs" />
     <Compile Include="Service\ProveedorService.cs" />
     <Compile Include="Service\RegistroAccesoService.cs" />
     <Compile Include="Service\RequisitoColaboradorService.cs" />
+    <Compile Include="Service\RutaHorarioService.cs" />
+    <Compile Include="Service\RutaHorarioVehiculoService.cs" />
+    <Compile Include="Service\RutaService.cs" />
     <Compile Include="Service\ServicioProveedorService.cs" />
     <Compile Include="Service\ServicioRolService.cs" />
     <Compile Include="Service\SolicitudViandaService.cs" />
@@ -241,6 +267,7 @@
     <Compile Include="Service\TipoOpcionComidaService.cs" />
     <Compile Include="Service\UsuarioMovilService.cs" />
     <Compile Include="Service\UsuarioService.cs" />
+    <Compile Include="Service\VehiculoService.cs" />
     <Compile Include="Service\ZonaService.cs" />
   </ItemGroup>
   <ItemGroup>
