--- a/src/com.cpp.calypso.web/com.cpp.calypso.web.csproj
+++ b/src/com.cpp.calypso.web/com.cpp.calypso.web.csproj
@@ -551,6 +551,10 @@
     <Compile Include="Migrations\201905281501152_Cambios_BDD.Designer.cs">
       <DependentUpon>201905281501152_Cambios_BDD.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905281804317_Usuario_uid.cs" />
+    <Compile Include="Migrations\201905281804317_Usuario_uid.Designer.cs">
+      <DependentUpon>201905281804317_Usuario_uid.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AuditableEntityViewModel.cs" />
     <Compile Include="Models\AuditoriaViewModel.cs" />
@@ -1125,6 +1129,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201905281501152_Cambios_BDD.resx">
       <DependentUpon>201905281501152_Cambios_BDD.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905281804317_Usuario_uid.resx">
+      <DependentUpon>201905281804317_Usuario_uid.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\MvcResources.Overwrite.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
