SL: Respaldos de sincronizacion, guardar errores de sincronizacion

--- a/src/com.cpp.calypso.proyecto.aplicacion/com.cpp.calypso.proyecto.aplicacion.csproj
+++ b/src/com.cpp.calypso.proyecto.aplicacion/com.cpp.calypso.proyecto.aplicacion.csproj
@@ -195,11 +195,13 @@
     <Compile Include="Dto\RequisitoColaboradorDto.cs" />
     <Compile Include="Dto\ReservaHotelDto.cs" />
     <Compile Include="Dto\ReservaHotelQrDto.cs" />
+    <Compile Include="Dto\RespaldoMovilDto.cs" />
     <Compile Include="Dto\RutaDto.cs" />
     <Compile Include="Dto\RutaHorarioDto.cs" />
     <Compile Include="Dto\RutaHorarioVehiculoDto.cs" />
     <Compile Include="Dto\ServicioProveedorDto.cs" />
     <Compile Include="Dto\ServicioRolDto.cs" />
+    <Compile Include="Dto\SincronizacionLogDto.cs" />
     <Compile Include="Dto\SolicitudPinDto.cs" />
     <Compile Include="Dto\SolicitudReporteMovilDto.cs" />
     <Compile Include="Dto\SolicitudViandaDto.cs" />
@@ -242,11 +244,13 @@
     <Compile Include="Interfaces\IRequisitoColaborador.cs" />
     <Compile Include="Interfaces\IReservaHotel.cs" />
     <Compile Include="Interfaces\IReservaHotelQr.cs" />
+    <Compile Include="Interfaces\IRespaldoMovil.cs" />
     <Compile Include="Interfaces\IRuta.cs" />
     <Compile Include="Interfaces\IRutaHorario.cs" />
     <Compile Include="Interfaces\IRutaHorarioVehiculo.cs" />
     <Compile Include="Interfaces\IServicioProveedor.cs" />
     <Compile Include="Interfaces\IServicioRol.cs" />
+    <Compile Include="Interfaces\ISincronizacionLog.cs" />
     <Compile Include="Interfaces\ISolicitudPin.cs" />
     <Compile Include="Interfaces\ISolicitudReporteMovil.cs" />
     <Compile Include="Interfaces\ISolicitudVianda.cs" />
@@ -290,11 +294,13 @@
     <Compile Include="Service\RequisitoColaboradorService.cs" />
     <Compile Include="Service\ReservaHotelQrService.cs" />
     <Compile Include="Service\ReservaHotelService.cs" />
+    <Compile Include="Service\RespaldoMovilService.cs" />
     <Compile Include="Service\RutaHorarioService.cs" />
     <Compile Include="Service\RutaHorarioVehiculoService.cs" />
     <Compile Include="Service\RutaService.cs" />
     <Compile Include="Service\ServicioProveedorService.cs" />
     <Compile Include="Service\ServicioRolService.cs" />
+    <Compile Include="Service\SincronizacionLogService.cs" />
     <Compile Include="Service\SolicitudPinService.cs" />
     <Compile Include="Service\SolicitudReporteMovilService.cs" />
     <Compile Include="Service\SolicitudViandaService.cs" />
