--- a/src/com.cpp.calypso.webapi/Web.config
+++ b/src/com.cpp.calypso.webapi/Web.config
@@ -147,7 +147,8 @@ Referencia:
 
   <connectionStrings>
 
-    <!--<add name="DbConnectionString" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=com.cpp.calypso.servicios;Integrated Security=SSPI" providerName="System.Data.SqlClient" /> -->
+    <!-- <add name="DbConnectionString" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=com.cpp.calypso.servicios;Integrated Security=SSPI" providerName="System.Data.SqlClient" /> -->
+    <!-- <add name="DbConnectionString" connectionString="Data Source=techintpmdis.database.windows.net; Initial Catalog=com.cpp.produccion.servicios; User ID=pdmisadmin;Password=26364s*asd" providerName="System.Data.SqlClient" /> -->
     <add name="DbConnectionString" connectionString="Data Source=techintpmdis.database.windows.net; Initial Catalog=servicios; User ID=pdmisadmin;Password=26364s*asd" providerName="System.Data.SqlClient" /> 
   </connectionStrings>
 
