--- a/src/com.cpp.calypso.proyecto.dominio/com.cpp.calypso.proyecto.dominio.csproj
+++ b/src/com.cpp.calypso.proyecto.dominio/com.cpp.calypso.proyecto.dominio.csproj
@@ -181,11 +181,13 @@
     <Compile Include="Entidades\RequisitoColaborador.cs" />
     <Compile Include="Entidades\ReservaHotel.cs" />
     <Compile Include="Entidades\ReservaHotelQr.cs" />
+    <Compile Include="Entidades\RespaldoMovil.cs" />
     <Compile Include="Entidades\Ruta.cs" />
     <Compile Include="Entidades\RutaHorario.cs" />
     <Compile Include="Entidades\RutaHorarioVehiculo.cs" />
     <Compile Include="Entidades\ServicioProveedor.cs" />
     <Compile Include="Entidades\ServicioRol.cs" />
+    <Compile Include="Entidades\SincronizacionLog.cs" />
     <Compile Include="Entidades\SolicitudPin.cs" />
     <Compile Include="Entidades\SolicitudReporteMovil.cs" />
     <Compile Include="Entidades\SolicitudVianda.cs" />
