--- a/src/com.cpp.calypso.proyecto.aplicacion/com.cpp.calypso.proyecto.aplicacion.csproj
+++ b/src/com.cpp.calypso.proyecto.aplicacion/com.cpp.calypso.proyecto.aplicacion.csproj
@@ -175,6 +175,8 @@
     <Compile Include="Dto\ConsumoTransporteDto.cs" />
     <Compile Include="Dto\ConsumoViandaDto.cs" />
     <Compile Include="Dto\ConsumoViandaQrDto.cs" />
+    <Compile Include="Dto\ConsumoViandaQrTemporalDto.cs" />
+    <Compile Include="Dto\ConsumoViandaTemporalDto.cs" />
     <Compile Include="Dto\ContratoProveedorDto.cs" />
     <Compile Include="Dto\DetalleDistribucionDto.cs" />
     <Compile Include="Dto\DetalleReservaDto.cs" />
@@ -205,6 +207,7 @@
     <Compile Include="Dto\SolicitudPinDto.cs" />
     <Compile Include="Dto\SolicitudReporteMovilDto.cs" />
     <Compile Include="Dto\SolicitudViandaDto.cs" />
+    <Compile Include="Dto\SolicitudViandaTemporalDto.cs" />
     <Compile Include="Dto\TipoAccionEmpresaDto.cs" />
     <Compile Include="Dto\TipoCatalogoDto.cs" />
     <Compile Include="Dto\TipoOpcionComidaDto.cs" />
@@ -214,6 +217,8 @@
     <Compile Include="Dto\ZonaDto.cs" />
     <Compile Include="FooAsyncBaseCrudAppService.cs" />
     <Compile Include="Interfaces\IConsumoSinReservaHospedaje.cs" />
+    <Compile Include="Interfaces\IConsumoViandaQrTemporal.cs" />
+    <Compile Include="Interfaces\IConsumoViandaTemporal.cs" />
     <Compile Include="Interfaces\IDetalleReserva.cs" />
     <Compile Include="Interfaces\IDetalleReservaQr.cs" />
     <Compile Include="Interfaces\IEspacioHabitacion.cs" />
@@ -254,6 +259,7 @@
     <Compile Include="Interfaces\ISolicitudPin.cs" />
     <Compile Include="Interfaces\ISolicitudReporteMovil.cs" />
     <Compile Include="Interfaces\ISolicitudVianda.cs" />
+    <Compile Include="Interfaces\ISolicitudViandaTemporal.cs" />
     <Compile Include="Interfaces\ITipoAccionEmpresa.cs" />
     <Compile Include="Interfaces\ITipoCatalogo.cs" />
     <Compile Include="Interfaces\ITipoOpcionComida.cs" />
@@ -272,8 +278,10 @@
     <Compile Include="Service\ConsumoService.cs" />
     <Compile Include="Service\ConsumoSinReservaHospedajeService.cs" />
     <Compile Include="Service\ConsumoTransporteService.cs" />
+    <Compile Include="Service\ConsumoViandaQrTemporalService.cs" />
     <Compile Include="Service\ConsumoViandaService.cs" />
     <Compile Include="Service\ConsumoViandaQrService.cs" />
+    <Compile Include="Service\ConsumoViandaTemporalService.cs" />
     <Compile Include="Service\ContratoProveedorService.cs" />
     <Compile Include="Service\DetalleDistribucionService.cs" />
     <Compile Include="Service\DetalleReservaQrService.cs" />
@@ -304,6 +312,7 @@
     <Compile Include="Service\SolicitudPinService.cs" />
     <Compile Include="Service\SolicitudReporteMovilService.cs" />
     <Compile Include="Service\SolicitudViandaService.cs" />
+    <Compile Include="Service\SolicitudViandaTemporalService.cs" />
     <Compile Include="Service\TipoAccionEmpresaService.cs" />
     <Compile Include="Service\TipoCatalogoService.cs" />
     <Compile Include="Service\TipoOpcionComidaService.cs" />
